{
    "name": "PlayerInputInMenu",
    "maps": [
        {
            "name": "Interact",
            "id": "67331770-009a-4f62-ba51-5d2ae73e530c",
            "actions": [
                {
                    "name": "SwipeLeft",
                    "type": "Button",
                    "id": "4e236181-101e-4fcb-8cda-02d8deb1a71f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PressButton",
                    "type": "Button",
                    "id": "75b44502-e444-4753-aa4a-eddfadd38248",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwipeRight",
                    "type": "Button",
                    "id": "42268b54-49df-4ea9-9a6b-b3bb29295a08",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "43240229-250e-40b4-87e7-12e948ddb5cc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwipeLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0253c653-4144-4b12-9341-747bf9def824",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwipeLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61964d8e-1f1a-4887-951e-54d0cee3dbd4",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2be734df-6d9d-41a6-b61b-e8d9027f33f2",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef21a462-f4c7-4d54-92c1-e08babbd8f4d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwipeRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "584c2305-0883-4640-92f6-b40464c6a70a",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwipeRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}